Add meta description

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,11 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta name="description"
+        content="Timer Tomato is a flexible and easy-to-use online Pomodoro technique timer. Boost your productivity with us!">
 </head>
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<app-root></app-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
